--- a/linuxGuide/package.json
+++ b/linuxGuide/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5"
