--- a/linuxGuide/package.json
+++ b/linuxGuide/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "jwt-decode": "^4.0.0",
+    "katex": "^0.16.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -23,6 +25,8 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.0.17",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
