--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.6",
     "sequelize-cli": "^6.6.2",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.5.0",
+    "dockerode": "^3.3.1"
   },
   "devDependencies": {
     "eslint": "^9.23.0"
