--- a/linuxGuide/package.json
+++ b/linuxGuide/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/http": "^1.4.1",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/cli": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
@@ -42,6 +46,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
