--- a/linuxGuide/package.json
+++ b/linuxGuide/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.21",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -33,6 +34,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "@tailwindcss/typography": "^0.5.16",
     "@types/jwt-decode": "^2.2.1",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/xterm": "^2.0.3",
