--- a/linuxGuide/package.json
+++ b/linuxGuide/package.json
@@ -14,6 +14,7 @@
     "@capacitor/android": "^7.2.0",
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
