--- a/linuxGuide/package.json
+++ b/linuxGuide/package.json
@@ -16,6 +16,7 @@
     "@capacitor/core": "^7.2.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react-router-dom": "^5.3.3",
+    "@uiw/react-md-editor": "^4.0.7",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
@@ -27,6 +28,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
+    "remark-gfm": "^4.0.1",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
